[package]
name = "blog_os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
uart_16550 = "0.2.0" #串口 UARTs

[package.metadata.bootimage]
test-timeout = 300          # (in seconds)
# bootimage maps our success exit code to exit code 0 ,将
test-success-exit-code = 33         # (0x10 << 1) | 1
# 使得bootimage启动qemu时,从 0xf4 端口可以推出qemu, 0xf4在x86上是无用port
test-args = [
"-device",
"isa-debug-exit,iobase=0xf4,iosize=0x04", 
"-serial", "stdio",
"-display", "none"
]
